added ablity for user to get the 25 most popular tourist sites based on user input

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
+<input type='text' id='city'>
+<button id='userInput'>Submit</button>
+
 <div id="info">
 </div>
+
+
 
 <script src='./assets/js/script.js'></script>
 </body>
