--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,8 +17,10 @@
 </div>
 
 
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src='./assets/js/script.js'></script>
 
 </body>
 </html>
+
+
