added the ability to display the top 5 bar,resturants,monuments,muesumes

--- a/index.html
+++ b/index.html
@@ -10,17 +10,36 @@
 </head>
 <body>
 
+<h2>What kind of places would you like to visit?</h2>
+<input type="checkbox" id="museums" value="Museums">
+<label for="museums">Museums</label>
+<input type="checkbox" id="restaurants" value="Restaurants">
+<label for="restaurants">Restaurants</label>
+<input type="checkbox" id="bars" value="Bars">
+<label for="bars">Bars</label>
+<input type="checkbox" id="monuments" value="Monuments">
+<label for="monuments">Monuments</label>
+
+<h2>Please enter the city name</h2>
 <input type='text' id='city'>
 <button id='userInput'>Submit</button>
 
 <div id="info">
 </div>
 
+<div id="museums-div">
+</div>
+
+<div id="restaurants-div">
+</div>
+
+<div id="bars-div">
+</div>
+
+<div id="monuments-div">
+</div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src='./assets/js/script.js'></script>
-
 </body>
 </html>
-
-
