--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <input type="text" id="city" />
+    <button id="userInput">Submit</button>
 
-<input type='text' id='city'>
-<button id='userInput'>Submit</button>
+    <div id="info"></div>
 
-<div id="info">
-</div>
-
-
-
-<script src='./assets/js/script.js'></script>
-
-</body>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
