html starter file done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="navbar-end">
                 <div class="navbar-item">
                   <div class="buttons">
-                    <a class="button is-hoverable">
+                    <a class="button is-small is-dark is-hoverable">
                       Past Searches
                     </a>
                   </div>
