commented out first button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text" id="city" />
-    <button id="userInput">Submit</button>
+    <!-- <input type="text" id="city" />
+    <button id="userInput">Submit</button> -->
 
     <div id="info"></div>
 
