--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
           </div>
           <div class="column sports">
             <h4 class="title is-4 has-text-centered">Sporting Events</h4>
-            <ul class="has-text-centered sports">
+            <ul class="has-text-centered sports" id="sports">
               
             </ul>
           </div>
           <div class="column concerts">
             <h4 class="title is-4 has-text-centered">Live-Music</h4>
-            <ul class="has-text-centered concerts">
+            <ul class="has-text-centered concerts" id="concerts">
               
             </ul>
           </div>
