trying to filter out duplicates

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
             <a class="navbar-item is-white title is-1" href="#" style="font-weight: bold">
                 <p class="nav-item has-text-centered">Random Day</p>
             </a>
+
         </div>
 
         <div class="navbar-menu is-active">
             <div class="navbar-end">
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link" id="city-menu">
+                    <div class="navbar-link" id="city-menu">
                         Past Searches
-                    </a>
+                    </div>
 
                     <div class="navbar-dropdown" id="past-cities">
-                       
+                        <!--Past searched cities load here from local storage-->
+
                     </div>
                 </div>
             </div>
