changed picture layout

--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
                     </ul>
                 </div>
                 <div class="column bars">
-                    <h4 class="title is-4 has-text-centered">Restaurants</h4>
+                    <h4 class="title is-4 has-text-centered">Popular Restaurants</h4>
                     <ul class="has-text-centered bars" id="restaurants">
 
                     </ul>
                 </div>
                 <div class="column sports">
-                    <h4 class="title is-4 has-text-centered">Sporting Events</h4>
+                    <h4 class="title is-4 has-text-centered">Upcoming Sporting Events</h4>
                     <ul class="has-text-centered sports" id="sports">
 
                     </ul>
                 </div>
                 <div class="column concerts">
-                    <h4 class="title is-4 has-text-centered">Live-Music</h4>
+                    <h4 class="title is-4 has-text-centered">Upcoming Live-Music</h4>
                     <ul class="has-text-centered concerts" id="concerts">
 
                     </ul>
