info boxes will appear on button click

--- a/index.html
+++ b/index.html
@@ -80,32 +80,32 @@
 
     <div id="info">
         <div class="container">
-            <div class="columns is-desktop">
-                <div class="column museums">
+            <div class="columns" >
+                <div class="column museums is-hidden" id="all-museums">
                     <h4 class="title is-4 has-text-centered">Museums</h4>
                     <ul class="has-text-centered museums" id="museums">
 
                     </ul>
                 </div>
-                <div class="column monuments">
+                <div class="column monuments is-hidden" id="all-monuments">
                     <h4 class="title is-4 has-text-centered">Monuments</h4>
                     <ul class="has-text-centered monuments" id="monuments">
 
                     </ul>
                 </div>
-                <div class="column bars">
+                <div class="column restaurants is-hidden" id="all-restaurants">
                     <h4 class="title is-4 has-text-centered">Popular Restaurants</h4>
                     <ul class="has-text-centered bars" id="restaurants">
 
                     </ul>
                 </div>
-                <div class="column sports">
+                <div class="column sports is-hidden" id="all-sports">
                     <h4 class="title is-4 has-text-centered">Upcoming Sporting Events</h4>
                     <ul class="has-text-centered sports" id="sports">
 
                     </ul>
                 </div>
-                <div class="column concerts">
+                <div class="column concerts is-hidden" id="all-concerts">
                     <h4 class="title is-4 has-text-centered">Upcoming Live-Music</h4>
                     <ul class="has-text-centered concerts" id="concerts">
 
