added the openmenu api call but commented out until we decide final api

--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
             <p class="subtitle is-3">What is Random Day?</p>
             <div class="content site-instructions">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-                    assumenda sunt doloremque, vero incidunt similique fugiat. Tenetur
-                    quos commodi omnis aspernatur minima consequatur molestiae
-                    dignissimos ipsum! Aperiam repellat eum sapiente. Enim tenetur et
-                    deserunt a veniam voluptatum nam! Aperiam, accusantium!
+                    Have you ever found yourself sitting at home on your day off from your responsibilites and wanted to go out and do something but you forgot to make plans?<br> Or maybe you're in a new city and you have a few hours to discover something new? <br>Plan My Day is here to help! Just type in the name of the city you wish to search in and you'll be given a list of events or places to visit that you otherwise may have not thought to look up. So hurry up and go out and enjoy your day!
                 </p>
             </div>
         </div>
