--- a/index.html
+++ b/index.html
@@ -76,36 +76,36 @@
 
     <div id="info">
         <div class="container">
-            <div class="columns" >
-                <div class="column museums is-hidden" id="all-museums">
-                    <h4 class="title is-4 has-text-centered">Museums</h4>
-                    <ul class="has-text-centered museums" id="museums">
+            <div class="rows" >
+                <div class="row museums is-hidden" id="all-museums">
+                    <h4 class="title is-4">Museums</h4>
+                    <div class="col museums is-inline-block" id="museums">
 
-                    </ul>
+                    </div>
                 </div>
-                <div class="column monuments is-hidden" id="all-monuments">
-                    <h4 class="title is-4 has-text-centered">Monuments</h4>
-                    <ul class="has-text-centered monuments" id="monuments">
+                <div class="row monuments is-hidden" id="all-monuments">
+                    <h4 class="title is-4">Monuments</h4>
+                    <div class="col monuments is-inline-block" id="monuments">
 
-                    </ul>
+                    </div>
                 </div>
-                <div class="column restaurants is-hidden" id="all-restaurants">
-                    <h4 class="title is-4 has-text-centered">Popular Restaurants</h4>
-                    <ul class="has-text-centered bars" id="restaurants">
+                <div class="row restaurants is-hidden" id="all-restaurants">
+                    <h4 class="title is-4">Popular Restaurants</h4>
+                    <div class="col bars" id="restaurants">
 
-                    </ul>
+                    </div>
                 </div>
-                <div class="column sports is-hidden" id="all-sports">
-                    <h4 class="title is-4 has-text-centered">Upcoming Sporting Events</h4>
-                    <ul class="has-text-centered sports" id="sports">
+                <div class="row sports is-hidden" id="all-sports">
+                    <h4 class="title is-4">Upcoming Sporting Events</h4>
+                    <div class="col sports" id="sports">
 
-                    </ul>
+                    </div>
                 </div>
-                <div class="column concerts is-hidden" id="all-concerts">
-                    <h4 class="title is-4 has-text-centered">Upcoming Live-Music</h4>
-                    <ul class="has-text-centered concerts" id="concerts">
+                <div class="row concerts is-hidden" id="all-concerts">
+                    <h4 class="title is-4">Upcoming Live-Music</h4>
+                    <div class="col concerts" id="concerts">
 
-                    </ul>
+                    </div>
                 </div>
             </div>
         </div>
