--- a/index.html
+++ b/index.html
@@ -83,28 +83,28 @@
             <div class="columns">
                 <div class="column is-one-third is-hidden" id="all-museums">
                     <h4 class="title">Museums</h4>
-                    <div class="col museums is-inline-block" id="museums">
+                    <div class="column" id="museums">
 
                     </div>
                 </div>
                 <div class="column is-one-third is-hidden" id="all-monuments">
                     <h4 class="title">Monuments</h4>
-                    <div class="col monuments is-inline-block" id="monuments">
+                    <div class="column" id="monuments">
 
                     </div>
                 </div>
                 <div class="column is-one-third is-hidden" id="all-restaurants">
                     <h4 class="title">Popular Restaurants</h4>
-                    <div class="col bars" id="restaurants">
+                    <div class="column" id="restaurants">
 
                     </div>
                 </div>
             </div>
-            <div class="columns is-gapless is-multiline is-mobile">
+            <div class="columns is-centered">
                 <div class="column is-hidden" id="all-sports">
                     <h4 class="title">Upcoming Sporting Events</h4>
                     <div class="columns is-centered">
-                        <div class="column is-5" id="sports">
+                        <div class="column" id="sports">
 
                         </div>
 
@@ -113,7 +113,7 @@
                 <div class="column is-hidden" id="all-concerts">
                     <h4 class="title">Upcoming Live-Music</h4>
                     <div class="columns is-centered">
-                        <div class="column is-5" id="concerts">
+                        <div class="column" id="concerts">
 
                         </div>
 
