--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
+        </div>
 </body>
 
 </html>
