cleaned up the index

--- a/index.html
+++ b/index.html
@@ -78,51 +78,43 @@
 
     <br />
 
-    <div id="info">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-one-third is-hidden" id="all-museums">
-                    <h4 class="title">Museums</h4>
-                    <div class="column" id="museums">
 
-                    </div>
-                </div>
-                <div class="column is-one-third is-hidden" id="all-monuments">
-                    <h4 class="title">Monuments</h4>
-                    <div class="column" id="monuments">
+    <div class="container">
+        <div class="columns is-multiline is-mobile">
+            <div class="column is-one-third is-hidden" id="all-museums">
+                <h4 class="title">Museums</h4>
+                <div id="museums">
 
-                    </div>
-                </div>
-                <div class="column is-one-third is-hidden" id="all-restaurants">
-                    <h4 class="title">Popular Restaurants</h4>
-                    <div class="column" id="restaurants">
-
-                    </div>
                 </div>
             </div>
-            <div class="columns is-centered">
-                <div class="column is-hidden" id="all-sports">
-                    <h4 class="title">Upcoming Sporting Events</h4>
-                    <div class="columns is-centered">
-                        <div class="column" id="sports">
+            <div class="column is-one-third is-hidden" id="all-monuments">
+                <h4 class="title">Monuments</h4>
+                <div id="monuments">
 
-                        </div>
-
-                    </div>
                 </div>
-                <div class="column is-hidden" id="all-concerts">
-                    <h4 class="title">Upcoming Live-Music</h4>
-                    <div class="columns is-centered">
-                        <div class="column" id="concerts">
+            </div>
+            <div class="column is-one-third is-hidden" id="all-restaurants">
+                <h4 class="title">Popular Restaurants</h4>
+                <div id="restaurants">
 
-                        </div>
+                </div>
+            </div>
 
-                    </div>
+            <div class="column is-half is-hidden" id="all-sports">
+                <h4 class="title">Upcoming Sporting Events</h4>
+                <div id="sports">
+
+                </div>
+            </div>
+            <div class="column is-half is-hidden" id="all-concerts">
+                <h4 class="title">Upcoming Live-Music</h4>
+                <div id="concerts">
+
                 </div>
             </div>
         </div>
     </div>
-    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
