added picture stylings to fix size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar is-black" role="navigation" aria-label="main navigation">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item is-white title is-1" href="#" style="font-weight: bold">
                 <p class="nav-item has-text-centered">Random Day</p>
@@ -39,7 +39,7 @@
     <div class="hero">
         <div class="container">
             <div id="hero-img">
-                <img src="https://via.placeholder.com/768x400" />
+                <img src="./assets/Hero Plan my day.gif" />
             </div>
         </div>
     </div>
@@ -105,6 +105,15 @@
                     <h4 class="title">Upcoming Sporting Events</h4>
                     <div class="columns is-centered">
                         <div class="column" id="sports">
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="column" id="filler">
+                    <h4 class="title"></h4>
+                    <div class="columns is-centered">
+                        <div class="column" id="filler">
 
                         </div>
 
