changed wording to match rest of app

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item is-white title is-1" href="#" style="font-weight: bold">
-                <p class="nav-item has-text-centered">Random Day</p>
+                <p class="nav-item has-text-centered">Plan My Day</p>
             </a>
 
         </div>
@@ -49,7 +49,7 @@
 
     <div id="site-info">
         <div class="container has-text-centered">
-            <p class="subtitle is-3">What is Random Day?</p>
+            <p class="subtitle is-3">What is Plan My Day?</p>
             <div class="content site-instructions">
                 <p>
                     Have you ever found yourself sitting at home on your day off from your responsibilites and wanted to
