clicking enter on city input works now

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-info" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item is-white title is-1" href="#" style="font-weight: bold">
                 <p class="nav-item has-text-centered">Plan My Day</p>
