--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="hero">
         <div class="container">
             <div id="hero-img">
-                <img src="./assets/Hero Plan my day.gif" />
+                <img src="./assets/images/Hero Plan my day.gif" />
             </div>
         </div>
     </div>
