--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <nav class="navbar is-info" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-dark" role="navigation" aria-label="main navigation" style="background-color: #5271ff;">
         <div class="navbar-brand">
             <a class="navbar-item is-white title is-1" href="#" style="font-weight: bold">
-                <p class="nav-item has-text-centered">Plan My Day</p>
+                <p class="nav-item has-text-centered" id="head-text">Plan My Day</p>
             </a>
 
         </div>
@@ -66,11 +66,11 @@
 
     <div class="search-form has-text-centered">
         <div class="control container">
-            <input class="input is-rounded has-text-centered" type="text" style="width: 33%" id="city"
+            <input class="input is-info is-rounded has-text-centered" type="text" style="width: 33%" id="city"
                 placeholder="Enter your city" />
             <br />
             <br />
-            <button class="button is-rounded is-outlined" id="userInput">
+            <button class="button is-dark is-rounded" id="userInput" style="background-color: #5271ff;">
                 Plan my Day!
             </button>
         </div>
