sharing the html code to debug the icons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="hero">
         <div class="container">
             <div id="hero-img">
-                <img src="./assets/images/Hero Plan my day.gif" />
+                <img src="./assets/images/Hero Plan my day.gif"/>
             </div>
         </div>
     </div>
@@ -84,18 +84,23 @@
                 <div class="column is-one-third is-hidden" id="all-museums">
                     <h4 class="title">Museums</h4>
                     <div class="column" id="museums">
+                        <img src="./assets/images/Museums.png" alt="museums-icon"/>
 
                     </div>
                 </div>
                 <div class="column is-one-third is-hidden" id="all-monuments">
                     <h4 class="title">Monuments</h4>
                     <div class="column" id="monuments">
+                        <img src="./assets/images/Monuments.png" rel="monuments-icon"/>
 
                     </div>
                 </div>
+                
                 <div class="column is-one-third is-hidden" id="all-restaurants">
                     <h4 class="title">Popular Restaurants</h4>
                     <div class="column" id="restaurants">
+                        <img src="./assets/images/Restaurants.png" rel="restaurant-icon"/>
+                        
 
                     </div>
                 </div>
